--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "enzyme-to-json": "^3.3.4",
-    "react-addons-test-utils": "^15.6.2"
+    "react-addons-test-utils": "^15.6.2",
+    "redux-mock-store": "^1.5.3"
   }
 }
